--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/Avatar.jpg" alt="Avatar">
             </div>
-            <h2>Olá, eu sou Miguel</h2>
+            <h2>Olá, eu sou Marselo</h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
