--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/Avatar.jpg" alt="Avatar">
             </div>
-            <h2>Olá, eu sou Marselo</h2>
+            <h2>Olá, eu sou Miguel</h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
@@ -54,7 +54,13 @@
             </div>
         </div>
 
-   
+        <!-- Call to Action -->
+        <div class="cta">
+            <h2>Entre em contato comigo!</h2>
+            <p>Fique à vontade para me enviar uma mensagem.</p>
+            <button onclick="window.open('https://wa.me/4199819560', '_blank');">Enviar Mensagem</button>
+        </div>
+    </div>
 </body>
 
 </html>
