--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/Avatar.jpg" alt="Avatar">
             </div>
-            <h2>Olá, eu sou Miguel</h2>
+            <h2>Olá, eu sou o Ze AXE </h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
@@ -38,8 +38,8 @@
             <div class="conhecimentos">
                 <div class="conhecimento">
                     <img src="img/imagem1.jpg" alt="Foto do Canva">
-                    <p><strong>Conhecimento em Planilhas</strong></p>
-                    <p>"Aplico técnicas avançadas, automatizo tarefas e levo minha produtividade ao próximo nível!"</p>
+                    <p><strong> Montagem de Cubos Mágicos </strong></p>
+                    <p>" Sei o básico e avançado em montagem de cubos mágicos(Pia é bao)"</p>
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem2.jpg" alt="Foto do Canva">
