--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <div class="conhecimento">
                     <img src="img/imagem1.jpg" alt="Foto do Canva">
                     <p><strong> Montagem de Cubos Mágicos </strong></p>
-                    <p>" Sei o básico e avançado em montagem de cubos mágicos(Pia é bao)"</p>
+                    <p>" Sei o básico e avançado em montagem de cubos mágicos(Pia é bao)!"</p>
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem2.jpg" alt="Foto do Canva">
-                    <p><strong>Atendimento e Vendas</strong></p>
-                    <p>"Tenho experiência em atendimento e vendas, proporcionando soluções eficazes!"</p>
+                    <p><strong>Larápio Profissional</strong></p>
+                    <p>"Tenho experência no assunto de enviar mentiras, e desinformação na internet!(Vulgo ratao do PT)"</p>
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
