--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/avatar.jpg" alt="Avatar">
             </div>
-            <h2>Olá, eu sou o Ze AXE </h2>
+            <h2>Olá, eu sou o José </h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
