--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
-                    <p><strong>Projetos esportivos</strong></p>
-                    <p>"Experiência em projetos e esportes, com estágio em ONGs voltados para ação social!"</p>
+                    <p><strong> Jogador Nato</strong></p>
+                    <p>"Tenho mais de 100 horas jogadas em GOW:RAGNAROK(Muita coisa)!"</p>
                 </div>
             </div>
         </div>
