--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
                     <p><strong> Jogador Nato</strong></p>
-                    <p>"Tenho mais de 100 horas jogadas em GOW:RAGNAROK(Muita coisa)!"</p>
+                    <p>"Tenho mais de 100 horas jogadas em GOW, e Red Dead Redemtption 2(Muita coisa)!"</p>
                 </div>
             </div>
         </div>
