--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/avatar.jpg" alt="Avatar">
             </div>
-            <h2> Eu sou o José AXE (Machado em ingles, caso vc nao seja tao intelectual como eu )</h2>
+            <h2> Eu sou o José AXE</h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
