--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
                     <p><strong> Um Sonho</strong></p>
-                    <p>" Eu tenho um sonho de ser um grande ator de filmes porno, gostaria muito de ingressar nessa carreira porque sempre foi o meu sonho!"</p>
+                    <p>" Eu tenho u ser um grande gostaria muito de ingressar nessa carreira porque sempre foi o meu sonho!"</p>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
         <!-- Call to Action -->
         <div class="cta">
             <h2>Entre em contato comigo!</h2>
-            <p>Fique à vontade para me enviar uma oportunidade de ser um grande ator de filmes porno.</p>
+            <p>Fique à vontade para me enviar uma mensagem.</p>
             <button onclick="window.open('https://wa.me/4199819560', '_blank');">Enviar Mensagem</button>
         </div>
     </div>
