--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="conhecimentos">
                 <div class="conhecimento">
                     <img src="img/imagem1.jpg" alt="Foto do Canva">
-                    <p><strong> Montagem de Cubos Mágicos </strong></p>
-                    <p>" Sei o básico e avançado em montagem de cubos mágicos(Pia é bao)!"</p>
+                    <p><strong>Montagem de Cubos Mágicos</strong></p>
+                    <p>Sei o básico e avançado em montagem de cubos mágicos(Pia é bao)!</p>
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem2.jpg" alt="Foto do Canva">
@@ -48,16 +48,16 @@
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
-                    <p><strong> Um Sonho</strong></p>
-                    <p>" Eu tenho u ser um grande gostaria muito de ingressar nessa carreira porque sempre foi o meu sonho!"</p>
+                    <p><strong>Tema </strong></p>
+                    <p>Sobre </p>
                 </div>
             </div>
         </div>
 
         <!-- Call to Action -->
         <div class="cta">
-            <h2>Entre em contato comigo!</h2>
-            <p>Fique à vontade para me enviar uma mensagem.</p>
+            <h2>Contato</h2>
+            <p>Mande uma mensagem ai.</p>
             <button onclick="window.open('https://wa.me/4199819560', '_blank');">Enviar Mensagem</button>
         </div>
     </div>
