--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
-                    <p><strong>Tema </strong></p>
-                    <p>Sobre </p>
+                    <p><strong>Certificados</strong></p>
+                    <p>Tenho certificados em curso de inglês da EF, além de menções honrosas em provas do mesmo.</p>
                 </div>
             </div>
         </div>
