--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="conhecimento">
                     <img src="img/imagem2.jpg" alt="Foto do Canva">
                     <p><strong>Larápio Profissional</strong></p>
-                    <p>"Tenho experência no assunto de enviar mentiras, e desinformação na internet!(Vulgo ratao do PT)"</p>
+                    <p>Tenho experência no assunto de enviar mentiras, e desinformação na internet!(Vulgo ratao do PT)</p>
                 </div>
                 <div class="conhecimento">
                     <img src="img/imagem3.jpg" alt="Foto do Canva">
